--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="RDFShape client" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="%PUBLIC_URL%/codemirror/mode/shex/shex.js"></script>
     <title>RDFShape</title>
   </head>
   <body>
