--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- CSP -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src *; script-src *; style-src 'unsafe-inline'; img-src *; child-src 'none'; object-src 'none';">
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
