--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src *; script-src *; style-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src *; child-src 'none'; object-src 'none';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src *; script-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src *; child-src 'none'; object-src 'none';">
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
