--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; connect-src *; script-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src *; child-src 'none'; object-src 'none';"
+      content="default-src 'self'; connect-src *; script-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src * data: blob:; child-src 'none'; object-src 'none';"
     />
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
