Preconnect to the default API host.

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,8 @@
       content="RDFShape is an RDF service where you can play with semantic web formats and validation mechanisms."
     />
     <meta property="twitter:image" content="%PUBLIC_URL%/img/meta.png" />
+
+    <link rel="preconnect" href="%REACT_APP_RDFSHAPE_HOST%" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
